# cookbook

./: .gitignore  README.md
MFC/MFC_async/: MFC_async.sln
MFC/MFC_async/CodepageTests/: .editorconfig  .gitignore  CodepageF_t3.txt  CodepageTests.cpp  CodepageTests.vcxproj  CodepageTests.vcxproj.filters  foo.txt  new 2.txt  t4.txt
MFC/MFC_async/MFCApplication1/: ChildView.cpp  MFCApplication1.cpp  MFCApplication1.h  MFCApplication1.rc  MFCApplication1.vcxproj  MFCApplication1.vcxproj.filters  MainFrm.cpp  StartProcessDialog.cpp  StartProcessDialog.h  resource.h
MFC/MFC_async/MFC_async/: ClassView.cpp  FileView.cpp  MFC_async.cpp  MFC_async.h  MFC_async.vcxproj  MFC_async.vcxproj.filters  MFC_asyncDoc.cpp  MFC_asyncDoc.h  MFC_asyncView.cpp  MFC_asyncView.h  MFCasync.rc  MainFrm.cpp  PropertiesWnd.cpp  Resource.h
MFC/MFC_async/MFC_async/res/: MFCasync.rc2
bison/: CMakeLists.txt  README.md
bison/double_points/: CMakeLists.txt  double_points.yy
bison/model12d/: CMakeLists.txt  driver12d.cpp  driver12d.h  parser12d.yy  scanner12d.ll
bison/model12d/examples/: t1.12d  t1.12da
bison/simple_scanner/: CMakeLists.txt  scanner.l  scanner.ll
cpp_async/: CMakeLists.txt  async1.cpp
cpp_async/MFC/: CMakeLists.txt
unicode/: .editorconfig  CMakeLists.txt  ok-kor-BE.txt  read_adhoc.cpp  read_utf16.cpp  read_utf8.cpp  text-BE.txt  text-LE.txt  yyk-BE.txt  yyk-LE.txt  yyk-UTF8-BOM.txt  yyk-UTF8.txt  yyk-cp1251.txt
